--- a/app/templates/app/page1.html
+++ b/app/templates/app/page1.html
@@ -10,9 +10,8 @@
     <title>Django Render</title>
   </head>
   <body>
-    <h1 class="center">タイトル画面だよ</h1>
-    <form action="{% url 'page1' %}" method="get">
-    <button type="submit">スタート！</button>
-    </form>
+    <h1 class="center">ある山にて</h1>
+    <p>むかしむかしあるところに、おじいさんとおばあさんがおりました。</p>
+    <p>おじいさんは山に柴刈りに、おばあさんは川へ洗濯に行きました。</p>
   </body>
 </html>
