--- a/app/templates/app/page1.html
+++ b/app/templates/app/page1.html
@@ -12,7 +12,7 @@
   <body>
     <h1 class="center">ある山にて</h1>
     <p class="typeing" data-speed="200">むかしむかしあるところに、おじいさんとおばあさんがおりました。
-    おじいさんは山に柴刈りに、おばあさんは川へ洗濯に行きました。</p>
+    <br>おじいさんは山に柴刈りに、おばあさんは川へ洗濯に行きました。</p>
 
     <!-- JavaScriptファイルを読み込み -->
     <script src="{% static 'js/maintext.js' %}"></script>
