--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1 class="center">タイトル画面だよ</h1>
     <form action="{% url 'page1' %}" method="get">
-    <button type="submit">スタート！</button>
+    <button type="submit">お話を読む</button>
     </form>
   </body>
 </html>
